# Rendering-Novat-Style

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  README.md  Rendu-Style-Nova.pro  Rendu-Style-Novat.pro  moc_counter.cpp  moc_progressinfo.cpp  moc_settingswindow.cpp  moc_viewer.cpp  ui_mainwindow.h  ui_settingswindow.h  vgcore.15770.REMOVED.git-id
Document_Ecrit/Rapport/: M2Report_Jonathan_Granier.blg  M2Report_Jonathan_Granier.tex  bibfile.bib
Document_Ecrit/Soutenance/: soutenance.toc
Models/: BDALTI_Alpe_d_huez.asc  MNT_basic.asc
doc/html/: annotated.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  class_camera-members.html  class_camera.html  class_main_window-members.html  class_main_window.html  class_mesh-members.html  class_mesh.html  class_mesh_loader-members.html  class_mesh_loader.html  class_model-members.html  class_model.html  class_progress_info-members.html  class_progress_info.html  class_progress_info__coll__graph.map  class_progress_info__coll__graph.md5  class_progress_info__inherit__graph.md5  class_shader-members.html  class_shader.html  class_track_ball-members.html  class_track_ball.html  class_vertex-members.html  class_vertex.html  class_viewer-members.html  class_viewer.html  class_viewer__coll__graph.md5  class_viewer__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  (+45 more)
doc/latex/: annotated.tex  camera_8h.tex  camera_8h__dep__incl.md5  camera_8h__incl.md5  class_camera.tex  class_main_window.tex  class_mesh.tex  class_mesh_loader.tex  class_model.tex  class_progress_info.eps  class_progress_info.tex  class_progress_info__coll__graph.md5  class_progress_info__inherit__graph.md5  class_shader.tex  class_track_ball.tex  class_vertex.tex  class_viewer.eps  class_viewer.tex  class_viewer__coll__graph.md5  class_viewer__inherit__graph.md5  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  struct_index.tex  struct_texture.tex
documentation/code_documentation/: Doxyfile.in
documentations/: controls.md
documentations/code_documentation/: Code_abstract.tex  Doxyfile  Doxyfile.in
lib/: glm_add.cpp  glm_add.h  stb_image.cpp
models/: BDALTI_Alpe_d_huez_simple.asc  MNT_basic.asc  mountains.obj.REMOVED.git-id
models/Alpe_d'huez_6_dalles/: Sud-Ouest.asc
models/Basic/: Est.asc  Ouest.asc
models/Grenoble_16_dalles/: BDALTIV1_FXX_0900_6440_MNT_20120919_LAMB93_IGN69.asc  BDALTIV1_FXX_0900_6470_MNT_20120919_LAMB93_IGN69.asc  BDALTIV1_FXX_0910_6440_MNT_20120919_LAMB93_IGN69.asc  BDALTIV1_FXX_0910_6450_MNT_20120919_LAMB93_IGN69.asc  BDALTIV1_FXX_0920_6440_MNT_20120919_LAMB93_IGN69.asc  BDALTIV1_FXX_0920_6470_MNT_20120919_LAMB93_IGN69.asc  BDALTIV1_FXX_0930_6470_MNT_20120919_LAMB93_IGN69.asc
models/Toy/: Mount_1.asc
ressources/schemas/: Pipeline.xml
shaders/: basic.frag  basic.vert  computelight.frag  computelight.frag.autosave  computelight.vert  correctcurvature.frag  curvature.frag  curvature.vert  curvaturecyril.frag  debug.frag  debug.vert  drawtexture.frag  drawtexture.vert  editheightmap.frag  fragmentshader.frag  gaussBlur.frag  gaussBlur.vert  generatelight.frag  generatelight.vert  genheightmap.frag  heightmap.frag  mergeshadow.frag  morpho.frag  morpho.vert  normalmap.frag  normalmap.vert  parallax.frag  phong.frag  phong.vert  phongspec.frag  phongspec.vert  shadelight.frag  shading.frag  shadowlight.frag  shadowmap.frag  shadowmap.vert  shadowmapdebug.frag  slant.frag  toon1D.frag  toon1D.vert  (+1 more)
sources_code/shaders/: computelight.frag  computelight.vert  drawtexture.frag  drawtexture.vert  editheightmap.frag  editheightmap.vert  (+20 more)
src/: Indexation_test.cpp  Save_camera.cpp  Save_camera.h  camera.cpp  camera.h  camera_test.cpp  camera_test.h  glad.c  inputeventmanager.cpp  inputeventmanager.h  light.cpp  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  meshLoader.cpp  meshLoader.h  meshloader.cpp  meshloader.h  model.cpp  model.h  progressbar.cpp  progressbar.h  progressinfo.cpp  progressinfo.h  shader.cpp  shader.h  texture.cpp  texture.h  trackball.cpp  trackball.h  trackball_test.cpp  trackball_test.h  vertex.cpp  vertex.h  vertexLoader.cpp  vertexLoader.h  (+2 more)
textures/: dégradé_neige_ombre.xcf
trash/: moc_progressinfo.cpp
(+594 files in other folders)
